--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body class="main-content">
-    <header class="section sec1 header"id= "home">
+    <header class="section sec1 active"id= "home">
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
@@ -47,7 +47,7 @@
 
     </header>
     <main>
-        <section class="container about" id="about">
+        <section class="section sec2 about" id="about">
             <div class="main-title">
                 <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
             </div>
@@ -55,13 +55,10 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.
+                    I'm a <span class="bg-text">christian</span>                         
+                    An aspiring data scientist passionate on the field of Ai and machine learning 
+                    I love music and enjoy reading books and wisdom teachings !! 
+                    
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -220,7 +217,7 @@
                 </div>
             </div>
         </section>
-        <section class="container" id="portfolio">
+        <section class="section sec3 portfolio" id="portfolio">
             <div class="main-title">
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
             </div>
@@ -363,7 +360,7 @@
                 </div>
             </div>
         </section>
-        <section class="container" id="blogs">
+        <section class="section sec4 blogs" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
                     <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
@@ -375,7 +372,7 @@
                             <h4>
                                 How to Create Your Own Website
                             </h4>
-                            <p>
+                            <p>`
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                                 Doloribus natus voluptas, eos obcaecati recusandae amet?
                             </p>
@@ -453,8 +450,7 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                            I'm Excited to be intouch with you, please check me out as far as i could help..!!
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -463,7 +459,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    : Dar-es-salaam, Tanzania
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -472,7 +468,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>: jeliusheneriko47@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -481,7 +477,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>: Bachelor Degree in Data Science,<br>Eastern African Statistical Trainig Center [EASTC]</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -490,7 +486,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>: +255 686-971-266</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -499,7 +495,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: Swahili, English</span>
                                 </p>
                             </div>
                         </div>
