--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 </div>
             </div>
         </section>
-        <section class="section sec4 blogs" id="blogs">
+        <!-- <section class="section sec4 blogs" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
                     <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
@@ -440,7 +440,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
@@ -551,9 +551,9 @@
         <div class="control" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
         </div>
-        <div class="control" data-id="blogs">
+        <!-- <div class="control" data-id="blogs">
             <i class="far fa-newspaper"></i>
-        </div>
+        </div> -->
         <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
